--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      - run: npm run install bats
+      - run: npm install bats
       - run: run bats -v
