--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install bats
-      - run: run bats -v
+      - run: bats -v
