--- a/py.yml
+++ b/py.yml
@@ -1,7 +1,7 @@
 name: Setup Go environment
 on:
   pull:
-    branches: [py]
+    branches: [main]
 jobs:
   go-version-lab:
     runs-on: ubuntu-latest
