--- a/py.yml
+++ b/py.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '>=1.17.0'
-    - run: go version
+    - run: go run hello.go
