--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 name: install-go-env
 on: 
   pull_request: 
-    branches: [main, solution]
+    branches: [solution]
 jobs:
   check-go-version:
     runs-on: ubuntu-latest
